--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1643,107 +1643,107 @@ stories:
   domain: http://www.beebenews.com/
   link: https://beebenews.com/?p=34855
 images:
-- name: bordercrossing-bordercrossing-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-circuit.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-two.jpg
-- name: bf-skinner-working-on-railroad-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-2.jpg
-- name: nazi-invasion-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-container-several-colors-grey.jpg
-- name: berlinwall2-berlinwall-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-creativity.jpg
-- name: stories-yuma-downtown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-yuma-downtown.jpg
-- name: downtown-los-angeles-downtown-la-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gred-mash.JPG
-- name: beach-rocks-beach-rocks-currents-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crunch-paper.jpg
+- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
+- name: birdhouse-birdhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-spagetti-accident.jpg
+- name: legal-statue-legalstatue-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sunday.jpg
+- name: old-school-house-old-schoolhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-brush.jpg
+- name: nazi-invasion-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-bridge-over-columbia.jpg
+- name: ellis-island-ellisisland-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-monet-one.jpg
+- name: castle-wall-DSC-0067-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit-2.JPG
+- name: castle-wall-DSC-0067-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit.JPG
+- name: paris-paris-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dali-three.jpg
+- name: eduardo-eduardo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
+- name: trucksilo-trucksilo-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kandinsky-bv.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+- name: mosaic-face-mosaic-face-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit-2.jpg
+- name: amusement-park-amusement-park-2-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-graham-sutherland.jpg
+- name: status-berlin-status-berlin-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-4.jpg
+- name: stalin-time-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hollywood-sign-with-tower.jpg
+- name: beach-clouds-lifeguard-beachclouds-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gred-mash.jpg
 - name: la-muse-construction-crane-city.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-construction-crane-city.jpg
-- name: copper-circuit-statue-playing-instrument.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-playing-instrument.jpg
-- name: white-house-whitehouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-electricity.jpg
-- name: berlinwall-DSC-0084-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
-- name: gypsymosaic-gypsy-eyes-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
-- name: curtain-curtain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain.jpg
-- name: mediterranean-mediterranean-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-storm.jpg
-- name: old-granary-field-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
-- name: oldcabin-store-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-emily-carr.jpg
-- name: server-cloud-server-racks-clouds-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-free-woman.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
-- name: nazi-invasion-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desktop-laptop-chair.jpg
-- name: server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
-- name: art-museum-art-museum-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-constitution.jpg
-- name: bordercrossing-bordercrossing-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
-- name: scream-IMG_6945.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_6945.jpg
-- name: liberty-back-statue-liberty-back-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-constitution.jpg
-- name: copper-circuit-waterfront-in-italy-mist.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-waterfront-in-italy-mist.jpg
-- name: nyc-flag-nycflag-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-constitution.jpg
-- name: copper-circuit-subway-brooklyn-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-brooklyn-station.jpg
-- name: copper-circuit-hollywood-sign-hills.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hollywood-sign-hills.jpg
-- name: wreck-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_7054.jpg
-- name: paris-paris-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-far-away.jpg
-- name: aws-s3-stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-blue-circuit-3.jpg
-- name: castle-wall-DSC-0067-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gan-vogh.JPG
-- name: oldhotel-oldhotel-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: copper-circuit-google-front-of-business.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-google-front-of-business.jpg
-- name: beach-rocks-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
-- name: oldhousecars-house-old-cars-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-three.jpg
-- name: ellis-island-ellisisland-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-- name: old-house-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
-- name: flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-- name: subway-subway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-neo-instinct.jpg
-- name: oldcabin-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
-- name: blossombar-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-00-00.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+- name: udnie-IMG_4425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4425.jpg
+- name: bluelake-blue-brush-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
+- name: mediterranean-mediterranean-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-blocks.jpg
+- name: braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+- name: blossombar-neo-instinct-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-00-00.jpg
+- name: oldhousecars-house-old-cars-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-storm.jpg
+- name: sand-hand-sand-hand-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-5.jpg
+- name: old-cabin-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
+- name: christianity-christianity-under-construction-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-monet-one.jpg
+- name: status-berlin-status-berlin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
+- name: old-barn-old-barn-1500-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gred-mash.jpg
+- name: subway-subway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-space-pizza.jpg
+- name: rockingchair-rockingchair-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
+- name: fence-mexico-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-three.jpg
+- name: paris-paris-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dali-two.jpg
+- name: oldcabin-oldcabin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-emily-carr.jpg
+- name: old-door-lock-old-door-lock-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purp-paper.jpg
+- name: amusement-park-amusement-park-2-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-rain.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+- name: window-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
+- name: razorcliff-razorcliff-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-wols.jpg
+- name: copper-circuit-docks-big-cosco-ship.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docks-big-cosco-ship.jpg
+- name: rain-princess-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
+- name: la-muse-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-early-computer-bletchley.jpg
+- name: old-house-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-neo-instinct.jpg
+- name: aws-s3-stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dragon-close-up-yellow-collage.jpg
+- name: powerlines-power-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-aqua.jpg
+- name: ellis-island-ellis-island-room-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-clean-view.jpg
+- name: old-door-lock-old-door-lock-2-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-rainbow-festival.jpg
+- name: old-door-lock-old-door-lock-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-marcel-duchamp.jpg
 ---
 Expert Event Planner Deb Miller.&nbsp;Signs Of Trouble With Federal Surveillance Program.&nbsp;Mayor, Cemetery At Odds In Search For Tulsa Massacre Victims.&nbsp;Here's How To Wrap Oddly Shaped Holiday Gifts.&nbsp;Van Orsdel Holding Third Blue Christmas Service.&nbsp;Humbug! Where Does That Word Come From Anyway?.&nbsp;Former Kentucky Governor Defends Controversial Pardons.&nbsp;Wildcats Make Their Choices On National Signing Day.&nbsp;
